--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,10 @@ ul {
 }
 
 .destination-img {
-  width: 150px;
+  width: 200px;
   height: 150px;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 footer {
