--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,13 @@ main {
 
 .text-container {
   height: 500px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
+  -webkit-column-width: 500px;
+  -moz-column-width: 500px;
+  column-width: 500px;
+  -webkit-column-gap: 1rem;
+  -moz-column-gap: 1rem;
+  column-gap: 1rem;
+  overflow: hidden;
 }
 
 .text-part {
