--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ nav ul li a:hover {
 main {
   padding: 2rem;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .img-container {
@@ -63,13 +64,10 @@ main {
   overflow: hidden;
 }
 
-
 .text-part {
   overflow: auto;
   white-space: pre-wrap;
 }
-
-
 
 other {
   padding: 2rem;
@@ -98,4 +96,34 @@ footer {
   padding: 1rem;
   margin-top: 1rem;
   flex-shrink: 0;
+}
+
+/* Media query pour les écrans de petite taille (jusqu'à 600px de large) */
+@media (max-width: 600px) {
+  .img-container {
+    width: 100%;
+    height: auto;
+  }
+
+  .text-container {
+    height: auto;
+    -webkit-columns: 100% auto;
+    -moz-columns: 100% auto;
+    columns: 100% auto;
+  }
+}
+
+/* Media query pour les écrans de taille moyenne (entre 601px et 1200px de large) */
+@media (min-width: 601px) and (max-width: 1200px) {
+  .img-container {
+    width: 50%;
+    height: auto;
+  }
+
+  .text-container {
+    height: auto;
+    -webkit-columns: 50% auto;
+    -moz-columns: 50% auto;
+    columns: 50% auto;
+  }
 }
