--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background-color: #87CEFA;
+  background-color: #1E90FF;
   color: white;
   text-align: center;
   padding: 1rem;
@@ -90,7 +90,7 @@ ul {
 }
 
 footer {
-  background-color: #87CEFA;
+  background-color: #1E90FF;
   color: white;
   text-align: center;
   padding: 1rem;
