--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,6 @@ body {
   min-height: 100vh; /* 100% de la hauteur de la fenêtre */
 }
 
-header {
-  background-color: #1E90FF;
-  color: white;
-  text-align: center;
-  padding: 1rem;
-}
-
 .lock_outline {
   color: yellow;
 }
@@ -92,15 +85,6 @@ ul {
   border-radius: 10px;
 }
 
-footer {
-  background-color: #1E90FF;
-  color: white;
-  text-align: center;
-  padding: 1rem;
-  margin-top: 1rem;
-  flex-shrink: 0;
-}
-
 /* Media query pour les écrans de petite taille (jusqu'à 600px de large) */
 @media (max-width: 600px) {
   .img-container {
@@ -131,21 +115,45 @@ footer {
   }
 }
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 250px;
-  height: 100%;
-  background-color: #f4f4f4;
-  padding: 1rem;
-  box-sizing: border-box;
-  overflow: auto;
-}
-
 .sidebar input {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  padding: 1rem;
+  background-color: white;
+  box-shadow: -3px 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow-y: auto;
+}
+
+header {
+  background-color: #1E90FF;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  z-index: 2;
+  position: relative;
+}
+
+footer {
+  background-color: #1E90FF;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  margin-top: 1rem;
+  flex-shrink: 0;
+  z-index: 2;
+  position: relative;
 }
 
