--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  margin: 0;
   padding: 0;
   background-color: #f4f4f4;
   overflow: hidden;
-  min-height: 100vh; /* 100% de la hauteur de la fenêtre */
+  min-height: 100vh;
 }
 
 .lock_outline {
@@ -37,6 +47,7 @@ nav ul li a:hover {
 }
 
 main {
+  flex-grow: 1;
   padding: 2rem;
 }
 
@@ -135,8 +146,8 @@ ul {
   flex-direction: column;
   gap: 1rem;
   overflow-y: auto;
-  padding-top: 100px; /* Ajouter une marge en haut */
-  padding-bottom: 50px; /* Ajouter une marge en bas */
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
 header {
@@ -158,4 +169,5 @@ footer {
   z-index: 2;
   position: relative;
 }
+
 
