--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ ul {
 }
 
 header {
-  background-color: #1c2331
+  background-color: #1E90FF;
   color: white;
   text-align: center;
   padding: 1rem;
@@ -155,7 +155,7 @@ header {
 }
 
 footer {
-  background-color: #1c2331
+  background-color: #1E90FF;
   color: white;
   text-align: center;
   padding: 1rem;
