--- a/styles.css
+++ b/styles.css
@@ -217,8 +217,8 @@ footer {
   }
 
   .photo-texts {
-    position: absolute;
-    left: 52%;
+    margin-left: 37%; /* Ajustez cette valeur pour déplacer les photos/descriptions horizontalement */
+    margin-top: 20px; /* Ajoutez une marge en haut pour séparer les photos/descriptions de la photo de Stockholm */
   }
 
   .photo-text {
@@ -227,17 +227,7 @@ footer {
     margin-bottom: 20px;
   }
 
-  .photo-text img {
-    width: 200px;
-    height: auto;
-    margin-right: 20px;
-  }
-
-  .photo-text p {
-    flex: 1;
-  }
-
-.photo-text.left img {
+  .photo-text.left img {
     margin-right: 20px;
   }
 
@@ -245,3 +235,11 @@ footer {
     order: 1;
     margin-left: 20px;
   }
+
+  .photo-text p {
+    flex: 1;
+  }
+
+
+
+
