--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,7 @@ footer {
 }
 
 .photo-text-container {
-  float: right;
+  float: left;
   width: calc(100% - 800px); /* Ajustez cette valeur en fonction de la largeur de votre barre latérale et du séparateur */
+  margin-left: 36%;
 }
