--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,8 @@ ul {
   gap: 1rem;
   overflow-y: auto;
   float: right;
+   padding-top: 100px; /* Ajustez cette valeur en fonction de la hauteur de votre header */
+  padding-bottom: 100px; /* Ajustez cette valeur en fonction de la hauteur de votre footer */
 }
 
 header {
