--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ ul {
   gap: 1rem;
   overflow-y: auto;
   float: right;
-   padding-top: 100px; /* Ajustez cette valeur en fonction de la hauteur de votre header */
+   padding-top: 120px; /* Ajustez cette valeur en fonction de la hauteur de votre header */
   padding-bottom: 100px; /* Ajustez cette valeur en fonction de la hauteur de votre footer */
 }
 
@@ -248,6 +248,6 @@ footer {
   float: left;
   width: calc(100% - 800px); /* Ajustez cette valeur en fonction de la largeur de votre barre latérale et du séparateur */
   margin-left: 36%;
-  margin-right: 200px;
+  padding-right: 200px;
   margin-top: -600px;
 }
