--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ ul {
 }
 
 header {
-  background-color: #1E90FF;
+  background-color: #000080;
   color: white;
   text-align: center;
   padding: 1rem;
@@ -171,7 +171,7 @@ header {
 }
 
 footer {
-  background-color: #1E90FF;
+  background-color: #000080;
   color: white;
   text-align: center;
   padding: 1rem;
