--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ footer {
     display: flex;
     font-size: 1.2rem;
     line-height: 1.6;
-    max-width: 90%;
+    width: 50;
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-wrap: break-word;
