--- a/styles.css
+++ b/styles.css
@@ -266,11 +266,10 @@ footer {
   margin-left: 36%; /* Ajustez cette valeur en fonction de l'espace souhaité après le contenu précédent */
 }
 
-.container1 {
-            display: flex;
-        }
-.box1 {
-            margin: 10px;
-            padding: 20px;
-            border: 1px solid black;
-        }
+.left-container,
+.right-container {
+  width: calc(50% - 20px);
+  float: left;
+  padding: 1rem;
+  box-sizing: border-box;
+}
